Makefile     slightly changed make commands

--- a/test/Makefile
+++ b/test/Makefile
@@ -2,6 +2,6 @@ CFLAGS= -Wall -o
 INCLUDE= -lwiringPi
 
 all:
-	gcc $(CFLAGS) blink LED.c $(INCLUDE)
-	gcc $(CFLAGS) count counter.c $(INCLUDE)
+	gcc $(CFLAGS) blink.o LED.c $(INCLUDE)
+	gcc $(CFLAGS) count.o counter.c $(INCLUDE)
 
