--- a/src/Makefile
+++ b/src/Makefile
@@ -2,7 +2,7 @@ CFLAGS = -Wall -o
 INCLUDE = -l wiringPi
 
 pi-bot.o: main.c
-	gcc $(CFLAGS) $@ $% $(INCLUDE)
+	gcc $(CFLAGS) $@ $< $(INCLUDE)
 
 clean:
 	rm *.o
