--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,8 @@
 CFLAGS = -Wall -o
 INCLUDE = -l wiringPi
 
-pi-bot.o: main.c
+pi-bot.o: control.c
 	gcc $(CFLAGS) $@ $< $(INCLUDE)
-
+	
 clean:
 	rm *.o
